--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Basic App</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="users">Users</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="products">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="contact-us">Contact Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="enquiry">Enquiry</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-
+<app-header></app-header>
 <div style="border: 1px solid red; padding: 10px">
   <router-outlet></router-outlet>
 </div>
+
+<!-- <app-header></app-header> -->
