--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -12,7 +12,7 @@
 <!-- {{productList | json}} -->
 <div class="container-fluid">
     <div class="row">
-        <ng-container *ngFor="let item of productList; let i =index;">
+        <ng-container *ngFor="let item of productList; let i =index; trackBy:trackProducts">
             <div class="col-sm-12 col-md-2 col-lg-2">
                 <div class="card">
                     <img [src]="item.productImg" class="card-img-top" alt="">
@@ -20,10 +20,8 @@
                       <!-- <h5 class="card-title">{{item.productName | titlecase}}</h5> -->
                       <h5 class="card-title">{{item.productName | uppercase | slice:0:2}}</h5>
                       <p>{{item.createdAt | date:"MMM d, y, h:mm:ss a"}}</p>
-                      <p>22442</p>
-                      <p>22442</p>
-                      <p>22442</p>
-                      <p>22442</p>
+                      <p [ngClass]="item.isActive ? 'btn btn-success':'btn btn-danger'">{{item.isActive ? 'Active':'InActive'}}</p>
+                      <p>22442</p> 
                     </div>
                   </div>
               </div>
