--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -1,14 +1,58 @@
 <p>employees works!</p>
+<section style="height: 200px;border: 2px solid gray;" *ngIf="hasEmpDatails">
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            {{ empDetails | json}}
+        </div>
+    </div>
+  </div>
+</section>
+<section style="min-height: 200px;border: 2px solid gray;">
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+          <h3>Add New User</h3>
+           <form id="employeeForm" onsubmit="return false;">
+            <div class="mb-3">
+              <label for="firstName" class="form-label">First Name</label>
+              <input type="text" class="form-control" id="firstName" placeholder="Enter first name">
+            </div>
+            <div class="mb-3">
+              <label for="lastName" class="form-label">Last Name</label>
+              <input type="text" class="form-control" id="lastName" placeholder="Enter Last name">
+            </div>
+            <div class="mb-3">
+              <label for="emailId" class="form-label">Email Id</label>
+              <input type="text" class="form-control" id="emailId" placeholder="Enter Last name">
+            </div>
+            <div class="mb-3">
+              <label for="phoneNo" class="form-label">Phone No</label>
+              <input type="text" class="form-control" id="phoneNo" placeholder="Enter Last name">
+            </div>
+            <div class="mb-3">
+              <label for="status" class="form-label">Status</label>
+              <select class="form-select" aria-label="Default select example" id="status">
+                <option selected>--Select Status</option>
+                <option [value]="item" *ngFor="let item of empStatus; let i = index">{{item | titlecase}}</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <button type="submit" class="btn btn-primary btn-sm" (click)="addEmployee()">Submit</button>
+            </div>
+           </form>
+        </div>
+    </div>
+  </div>
+</section>
 
 {{ empList.length }}
-{{ empList | makeJson }}
-
-<select class="form-select" aria-label="Default select example">
+<!-- <select class="form-select" aria-label="Default select example">
   <option selected>---Select Country--</option>
   <option [value]="item" *ngFor="let item of countryList; let i = index">
     {{ item }}
   </option>
-</select>
+</select> -->
 
 <table class="table">
   <thead>
@@ -16,6 +60,8 @@
       <th scope="col">#</th>
       <th scope="col">First</th>
       <th scope="col">Last</th>
+      <th scope="col">Email Id</th>
+      <th scope="col">Phone No</th>
       <th scope="col">Status</th>
       <th scope="col">Action</th>
     </tr>
@@ -43,7 +89,9 @@
           </ng-container>
         </ng-container>
         
-        <td [ngStyle]="{'font-size':'20px','color':'blue'}">{{ item.lastName }}</td>
+        <td>{{ item.lastName }}</td>
+        <td>{{ item.emailId }}</td>
+        <td>{{ item.phoneNo }}</td>
         <td>
           <!-- 
           <ng-container *ngIf="item.status == 'success'">
@@ -89,8 +137,8 @@
         <td>
           <button type="button" class="btn btn-primary btn-sm" id="123" [attr.my-data]="item.status"
           >Edit</button>
-          <button type="button" class="btn btn-success btn-sm" id="123" [attr.my-data]="item.status">View</button>
-          <button type="button" class="btn btn-danger btn-sm" id="123" [attr.my-data]="item.status">Delete</button>
+          <button type="button" class="btn btn-success btn-sm" id="123" (click)="viewEmployee(i, item)" [attr.my-data]="item.status">View</button>
+          <button type="button" class="btn btn-danger btn-sm" id="123" (click)="deleteEmployee(i, item)" [attr.my-data]="item.status">Delete</button>
         </td>
       </tr>
     </ng-container>
