--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -13,32 +13,60 @@
     <div class="row">
         <div class="col-12">
           <h3>Add New User</h3>
-           <form id="employeeForm" onsubmit="return false;">
+           <form id="employeeForm" [formGroup]="employeeForm" (ngSubmit)="submitEmpForm()">
             <div class="mb-3">
               <label for="firstName" class="form-label">First Name</label>
-              <input type="text" class="form-control" id="firstName" placeholder="Enter first name">
+              <input type="text" class="form-control" formControlName="firstName" id="firstName"
+               placeholder="Enter first name" [ngClass]="{ 'is-invalid': isSubmitted && f['firstName']['errors'] }"
+               >
+               <div *ngIf="isSubmitted && f['firstName']['errors']" class="error-box">
+                <div *ngIf="f['firstName']['errors']['required']">First Name is required</div>
+                <div *ngIf="f['firstName']['errors']['minlength']"> Enter min 3 letters</div>
+                <div *ngIf="f['firstName']['errors']['maxlength']"> Enter max 10 letters</div>
+            </div>
+            
             </div>
             <div class="mb-3">
               <label for="lastName" class="form-label">Last Name</label>
-              <input type="text" class="form-control" id="lastName" placeholder="Enter Last name">
+              <input type="text" class="form-control" formControlName="lastName" id="lastName" placeholder="Enter Last name"
+              [ngClass]="{ 'is-invalid': isSubmitted && f['lastName']['errors'] }">
+              <div *ngIf="isSubmitted && f['lastName']['errors']" class="error-box">
+                <div *ngIf="f['lastName']['errors']['required']">First Name is required</div>
+                <div *ngIf="f['lastName']['errors']['minlength']"> Enter min 3 letters</div>
+            </div>
             </div>
             <div class="mb-3">
               <label for="emailId" class="form-label">Email Id</label>
-              <input type="text" class="form-control" id="emailId" placeholder="Enter Last name">
+              <input type="text" class="form-control" formControlName="emailId" id="emailId" placeholder="Enter Last name" 
+              [ngClass]="{ 'is-invalid': isSubmitted && f['emailId']['errors'] }">
+              <div *ngIf="isSubmitted && f['emailId']['errors']"  class="error-box">
+                <div *ngIf="f['emailId']['errors']['required']">Email Id is required</div>
+                <div *ngIf="f['emailId']['errors']['email']">Enter valid emaail</div>
+            </div>
             </div>
             <div class="mb-3">
               <label for="phoneNo" class="form-label">Phone No</label>
-              <input type="text" class="form-control" id="phoneNo" placeholder="Enter Last name">
+              <input type="text" class="form-control" formControlName="phoneNo" id="phoneNo" placeholder="Enter Last name" 
+              [ngClass]="{ 'is-invalid': isSubmitted && f['phoneNo']['errors'] }">
+              <div *ngIf="isSubmitted && f['phoneNo']['errors']" class="error-box">
+                <div *ngIf="f['phoneNo']['errors']['required']">Phone No is required</div>
+                <div *ngIf="f['phoneNo']['errors']['minlength']"> Enter 10 digits valid phone no</div>
+                <div *ngIf="f['phoneNo']['errors']['maxlength']"> Enter 10 digits valid phone no</div>
+            </div>
             </div>
             <div class="mb-3">
               <label for="status" class="form-label">Status</label>
-              <select class="form-select" aria-label="Default select example" id="status">
+              <select class="form-select" formControlName="status" aria-label="Default select example" id="status"
+              [ngClass]="{ 'is-invalid': isSubmitted && f['status']['errors'] }">
                 <option selected>--Select Status</option>
                 <option [value]="item" *ngFor="let item of empStatus; let i = index">{{item | titlecase}}</option>
               </select>
+              <div *ngIf="isSubmitted && f['status']['errors']" class="error-box">
+                <div *ngIf="f['status']['errors']['required']">Status is required</div>
+            </div>
             </div>
             <div class="mb-3">
-              <button type="submit" class="btn btn-primary btn-sm" (click)="addEmployee()">Submit</button>
+              <button type="submit" class="btn btn-primary btn-sm">Submit</button>
             </div>
            </form>
         </div>
