--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,6 +32,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="employees">Employees</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="rxjs">RXJS</a>
+          </li>
         </ul>
       </div>
     </div>
