--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,6 +33,9 @@
             <a class="nav-link" routerLink="employees">Employees</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="product-with-api">Product With Api</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="rxjs">RXJS</a>
           </li>
         </ul>
