--- a/src/app/product-with-api/product-with-api.component.html
+++ b/src/app/product-with-api/product-with-api.component.html
@@ -23,6 +23,8 @@
             >Edit</button> -->
             <button type="button" [routerLink]="['/product-details',item.id]" class="btn btn-primary btn-sm">View</button>
             <button type="button"  class="btn btn-success btn-sm" (click)="navigateToViewProductDetails(item.id)">View</button>
+            <button type="button"  class="btn btn-success btn-sm"  [routerLink]="['/product-details2']" [queryParams]="{ productId: item.id, brand: item.brand}">View WIth Qparams</button>
+            <button type="button"  class="btn btn-danger btn-sm"  (click)="navigateToViewProductDetails2(item)">View WIth Qparams</button>
             <!-- <button type="button" class="btn btn-danger btn-sm" id="123" (click)="deleteEmployee(i, item)" [attr.my-data]="item.status">Delete</button> -->
           </td>
         </tr>
