--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -25,6 +25,8 @@
                       <h5 class="card-title">{{item.productName | uppercase | slice:0:2}}</h5>
                       <p>{{item.createdAt | date:"MMM d, y, h:mm:ss a"}}</p>
                       <p [ngClass]="item.isActive ? 'btn btn-success':'btn btn-danger'">{{item.isActive ? 'Active':'InActive'}}</p>
+                     <button type="button" class="btn btn-sm btn-primary">View</button>
+
                       <p>22442</p> 
                     </div>
                   </div>
