--- a/src/app/product-with-api/product-with-api.component.html
+++ b/src/app/product-with-api/product-with-api.component.html
@@ -1,5 +1,8 @@
 <p>product-with-api works!</p>
 <!-- {{productList | json}} -->
+<!-- {{productsData | json}}
+{{usersData | json}}
+{{postsData | json}} -->
 <button
   type="button"
   class="btn btn-danger btn-sm"
