ngx-pagination class

--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -1,4 +1,6 @@
-
+<div class="page-heading-box">
+  <h4>Create New Product</h4>
+</div>
 <button
   type="button"
   class="btn btn-danger btn-sm"
@@ -10,7 +12,6 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <h3>Create New Product</h3>
         <form
           id="employeeForm"
           [formGroup]="productForm"
