--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+.page-heading-box{
+    box-shadow: -1px 3px 5px grey;
+    margin-bottom: 10px;
+    padding: 10px;
+    h4{
+        font-size: 16px;
+        color: #f04f0f;
+        margin: 0px;
+        padding: 0px;
+    }
+}
