--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -38,8 +38,13 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="rxjs">RXJS</a>
           </li>
+          <li class="nav-item">
+            <button type="button" class="btn btn-success" (click)="sendMesageToParent()">send Mesage To Parent</button>
+          </li>
         </ul>
+        {{userMessage}}
         <button type="button" class="btn btn-primary" *ngIf="isLoggedIn" (click)="logout()">Logout</button>
+      
       </div>
     </div>
   </nav>
