--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,8 @@
 <h2 class="section-title">Home</h2>
-<button type="button" class="btn btn-primary">Primary</button>
+<!-- {{userObs$ | async | json}} -->
+{{testObs$ | async}}
+<input type="text" #myInput>
+<button type="button" class="btn btn-primary" (click)="getInputValue(myInput.value)">Get Input Value</button>
 <table class="table">
   <thead>
     <tr>
