--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
 <button type="button" class="btn btn-primary" (click)="sendDataToChild()">send Data</button>
 <h3>{{dataFromChild}}</h3>
 <div style="border: 1px solid red; padding: 10px">
+  <!-- {{isloading | async}} -->
+  <ngx-spinner type="ball-scale-multiple"></ngx-spinner>
   <router-outlet></router-outlet>
 </div>
 
