--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 <!-- {{userObs$ | async | json}} -->
 {{testObs$ | async}}
 <input type="text" #myInput>
-<button type="button" class="btn btn-primary" (click)="getInputValue(myInput.value)">Get Input Value</button>
+<button type="button" appChangeColor class="btn btn-primary" (click)="getInputValue(myInput.value)">Get Input Value</button>
 <table class="table">
   <thead>
     <tr>
