--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -39,6 +39,15 @@
             <a class="nav-link" routerLink="rxjs">RXJS</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="feature-users">Users</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="customers">Customers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="dashboard">Dashboard</a>
+          </li>
+          <li class="nav-item">
             <button type="button" class="btn btn-success" (click)="sendMesageToParent()">send Mesage To Parent</button>
           </li>
         </ul>
