--- a/src/app/pages/product-with-api/product-with-api.component.html
+++ b/src/app/pages/product-with-api/product-with-api.component.html
@@ -31,12 +31,12 @@
         (keyup)="getProductByCategoryOnKeyUp($event)"
         placeholder="search by category"
       />
-      <button
-        class="btn btn-sm btn-primary"
+      <!-- <button
+        class="btn btn-sm btn-primary  search-btn"
         (click)="getProductByCategoryOnClick($event)"
       >
         Search
-      </button>
+      </button> -->
       <button
         class="btn btn-sm btn-danger"
         *ngIf="isClearShow"
