--- a/src/app/pages/add-product/add-product.component.html
+++ b/src/app/pages/add-product/add-product.component.html
@@ -3,7 +3,7 @@
 </div>
 <button
   type="button"
-  class="btn btn-danger btn-sm"
+  class="btn btn-danger btn-sm search-btn"
   id="123"
   routerLink="/product-with-api"
 >
