--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,12 @@
 <h2 class="section-title">Home</h2>
 <!-- {{userObs$ | async | json}} -->
 {{testObs$ | async}}
-<input type="text" #myInput>
-<button type="button" appChangeColor class="btn btn-primary" (click)="getInputValue(myInput.value)">Get Input Value</button>
+<input type="text" [(ngModel)]="searchValue">
+<button type="button" appChangeColor class="btn btn-primary" (click)="getSearchVal()">Get Input Value</button>
+<br>
+{{searchValue}}
+<!-- <input type="text" #myInput>
+<button type="button" appChangeColor class="btn btn-primary" (click)="getInputValue(myInput.value)">Get Input Value</button> -->
 <table class="table">
   <thead>
     <tr>
