--- a/src/app/pages/product-with-api/product-with-api.component.html
+++ b/src/app/pages/product-with-api/product-with-api.component.html
@@ -49,7 +49,7 @@
   <div class="col-md-4">
     <button
       type="button"
-      class="btn btn-primary btn-sm">
+      class="btn btn-primary btn-sm" (click)="exportUserInExcel()">
       Export In Excel
     </button>
   </div>
