--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -21,6 +21,9 @@
             <a class="nav-link" routerLink="users">Users</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="tdf">TDF</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="products">Products</a>
           </li>
           <li class="nav-item">
